# cumulative_cubic_B_spline

./: CMakeLists.txt  README.md  package.xml
config/: cumu_spline.rviz  demo.rviz
helper/matlab_src/B_spline_plot/: debug_gt_acc.txt  debug_gt_pose.txt  debug_gt_vel.txt  debug_imu.txt  init_pose.txt  plot_solved_spline_imu.m  plot_spline_imu.m  solve_acc.txt  solve_omega.txt  solve_pose.txt  solve_vel.txt  spline_acc.txt  spline_omega.txt  spline_pose.txt  spline_vel.txt
launch/: demo.launch  visensor.launch
src/: ceres_solve.cpp  ceres_solve.h  data_structure.cpp  data_structure.h  demo.cpp  main.cpp  parameters.h  utils.cpp  utils.h
